k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-web-app
  template:
    metadata:
      labels:
        app: java-web-app
    spec:
      containers:
      - name: java-web-app
        image: prathapreddy14/java-web-app:latest
        ports:
        - containerPort: 8080
