k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-web-app-service
spec:
  type: ClusterIP
  selector:
    app: java-web-app
  ports:
    - port: 80
      targetPort: 8080
